tests/lean/emptyc_errors.lean.expected.out
emptyc_errors.lean:4:52: error: don't know how to synthesize placeholder
state:
A : Type u,
x : A
⊢ Type u → Type ?
